[gd_scene load_steps=57 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Misc/Dust.png" type="Texture" id=2]
[ext_resource path="res://Player/Dust.gd" type="Script" id=3]
[ext_resource path="res://Player/Assets/Sprites/Sprite0000.png" type="Texture" id=4]
[ext_resource path="res://Player/Assets/Sprites/Jump0008.png" type="Texture" id=5]
[ext_resource path="res://Player/Assets/Sprites/Sprite0001.png" type="Texture" id=6]
[ext_resource path="res://Player/Assets/Sprites/Sprite0002.png" type="Texture" id=7]
[ext_resource path="res://Player/Assets/Sprites/Sprite0003.png" type="Texture" id=8]
[ext_resource path="res://Player/Assets/Sprites/Sprite0004.png" type="Texture" id=9]
[ext_resource path="res://Player/Assets/Sprites/Sprite0005.png" type="Texture" id=10]
[ext_resource path="res://Player/Assets/Sprites/Sprite0006.png" type="Texture" id=11]
[ext_resource path="res://Player/Assets/Sprites/fall0009.png" type="Texture" id=12]
[ext_resource path="res://Player/Assets/Sprites/fall0010.png" type="Texture" id=13]
[ext_resource path="res://Player/Assets/Sprites/Wall0007.png" type="Texture" id=14]
[ext_resource path="res://Player/Assets/Sprites/Face0000.png" type="Texture" id=15]
[ext_resource path="res://Player/Assets/Sprites/Face0001.png" type="Texture" id=16]
[ext_resource path="res://Player/Assets/Sprites/Face0002.png" type="Texture" id=17]
[ext_resource path="res://Player/Assets/Sprites/Face0003.png" type="Texture" id=18]
[ext_resource path="res://Player/Assets/Sprites/Face0005.png" type="Texture" id=19]
[ext_resource path="res://Player/Assets/Sprites/Face0004.png" type="Texture" id=20]
[ext_resource path="res://Player/Assets/Sprites/Dash/Dash0000.png" type="Texture" id=21]
[ext_resource path="res://Player/Assets/Sprites/Dash/Dash0001.png" type="Texture" id=22]
[ext_resource path="res://Player/Assets/Sprites/Dash/Dash0002.png" type="Texture" id=23]
[ext_resource path="res://Player/Assets/Sprites/Dash/Dash0003.png" type="Texture" id=24]
[ext_resource path="res://Player/Assets/Sprites/Dash/Dash0004.png" type="Texture" id=25]
[ext_resource path="res://Player/Assets/Sprites/Dash/Dash0005.png" type="Texture" id=26]
[ext_resource path="res://Player/Assets/Sprites/Dash/Dash0006.png" type="Texture" id=27]
[ext_resource path="res://Player/Assets/Sprites/Dash/Dash0007.png" type="Texture" id=28]
[ext_resource path="res://Player/Assets/Sprites/Dash/Dash0008.png" type="Texture" id=29]
[ext_resource path="res://Player/Assets/Sprites/Dash/Dash0009.png" type="Texture" id=30]
[ext_resource path="res://Player/Assets/Sprites/Dash/Dash0010.png" type="Texture" id=31]
[ext_resource path="res://Player/Assets/Sprites/Dash/Dash0011.png" type="Texture" id=32]
[ext_resource path="res://Player/Assets/Sprites/Dash/Dash0012.png" type="Texture" id=33]
[ext_resource path="res://Player/Assets/Sprites/Dash/Dash0013.png" type="Texture" id=34]
[ext_resource path="res://SFX/Hurt.wav" type="AudioStream" id=35]
[ext_resource path="res://SFX/Jump.wav" type="AudioStream" id=36]
[ext_resource path="res://SFX/Dash.wav" type="AudioStream" id=37]
[ext_resource path="res://SFX/Walk.wav" type="AudioStream" id=38]

[sub_resource type="Curve" id=1]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.244344, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0.2998 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -0.70414, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
spread = 120.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 1.0
angular_velocity = 100.0
angular_velocity_random = 1.0
angular_velocity_curve = SubResource( 2 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 1.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 30, 38 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 3, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "fall",
"speed": 12.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "onwall",
"speed": 5.0
} ]

[sub_resource type="Animation" id=11]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.6 ),
"transitions": PoolRealArray( 1.93187, 6.49802, 1, 0.517632 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ), Vector2( 0.25, 0.26 ), Vector2( 0.26, 0.24 ), Vector2( 0.25, 0.25 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.133972, 1 ),
"update": 0,
"values": [ Vector2( 0.36, 0.2 ), Vector2( 0.25, 0.25 ) ]
}

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 17 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "angry",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ) ],
"loop": false,
"name": "fall",
"speed": 12.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "onwall",
"speed": 5.0
} ]

[sub_resource type="Animation" id=14]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.466517, 0.466517 ),
"update": 0,
"values": [ Vector2( 0, 50 ), Vector2( 0, 45 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.25
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.21 ),
"transitions": PoolRealArray( 1, 0.63728 ),
"update": 0,
"values": [ Vector2( 0, 55 ), Vector2( 0, 45 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=17]
radius = 75.0

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), null ],
"loop": false,
"name": "dash",
"speed": 40.0
} ]

[node name="Player" type="KinematicBody2D"]
z_index = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
grav = 40
jumpvelo = 1100
walljumpxmultiplier = 1.0

[node name="Dust" type="Particles2D" parent="."]
position = Vector2( 0, 30 )
rotation = -1.5708
emitting = false
amount = 10
lifetime = 0.3
preprocess = 26.47
fract_delta = false
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="JumpGracePeriodTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="WallJumpGracePeriodTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="DashBuffer" type="Timer" parent="."]
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="WallJumpHitbox" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 32, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallJumpHitbox"]
shape = SubResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
editor/display_folded = true
position = Vector2( 0, 40 )
scale = Vector2( 0.36, 0.2 )
frames = SubResource( 10 )
animation = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/idle = SubResource( 11 )
anims/land = SubResource( 12 )

[node name="Face" type="AnimatedSprite" parent="."]
editor/display_folded = true
position = Vector2( 0, 45 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 13 )
animation = "jump"
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Face"]
autoplay = "default"
anims/default = SubResource( 14 )
anims/run = SubResource( 15 )

[node name="InvincibleAnim" type="AnimationPlayer" parent="."]
anims/invincible = SubResource( 16 )

[node name="DashHitbox" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 31
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashHitbox"]
shape = SubResource( 17 )

[node name="DashSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 18 )
animation = "dash"
frame = 14

[node name="Sound" type="Node2D" parent="."]

[node name="Hurt" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 35 )
volume_db = 0.986
max_distance = 5000.0

[node name="Jump" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 36 )
volume_db = -7.886
max_distance = 5000.0

[node name="Dash" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 37 )
volume_db = -3.0
max_distance = 5000.0

[node name="Run" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 38 )
volume_db = -17.0
max_distance = 5000.0

[connection signal="timeout" from="DashTimer" to="." method="on_dash_timeout"]
